--- a/Resume/index.html
+++ b/Resume/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Resume: Sneha Singhal</title>
-    <link rel="icon" href="Sneha.JPG" type="image/JPG" sizes="16*16" />
+    <link rel="icon" href="Sneha.jpg" type="image/jpg" sizes="16*16" />
     
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <style>
@@ -62,13 +62,13 @@
             <img src="github.png" style="width:50px; margin:20px;" />
         </a>
         <a href="https://www.hackerrank.com/snehasinghal073" target="_blank">
-            <img src="hackrrank.JPG" style="width:50px;margin:20px;" />
+            <img src="hackrrank.jpg" style="width:50px;margin:20px;" />
         </a>
         <a href="https://www.linkedin.com/in/sneha-singhal-30a424202/" target="_blank">
             <img src="linkedin.png" style="width:50px;margin:20px;" />
         </a>
         <a href="https://www.instagram.com/snehasinghal__/" target="_blank">
-            <img src="insta.JPG" style="width:50px;margin:20px;" />
+            <img src="insta.jpg" style="width:50px;margin:20px;" />
         </a><br /><br />
         <a href="sneha.pdf" target="_blank"; class="btn">Download CV</a>
     </div>
