--- a/RESUME/index.html
+++ b/RESUME/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Resume: Sneha Singhal</title>
-    <link rel="icon" href="Sneha.png" type="image/png" sizes="16*16" />
+    <link rel="icon" href="sneha.jpg" type="image/png" sizes="16*16" />
     
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <style>
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="leftside" style="color:#c9cad0; background-color: #0c192f; float:left; margin:18px;">
-        <img src="img.JPG" style="width:200px; border-radius:50%; border: 1px solid #c9cad0;  margin-left: 95px;  margin-top: 40px;" /><br /><br />
+        <img src="sneha.jpg" style="width:200px; border-radius:50%; border: 1px solid #c9cad0;  margin-left: 95px;  margin-top: 40px;" /><br /><br />
         <h1 style="text-align:center;font-size:250%;"><b>Sneha Singhal</b></h1><br />
         <h4 style="text-align:justify; margin-left:5%; font-size:120%;">Contact no.: +91-7827581279</h4><br />
         <h4 style="text-align:justify; margin-left:5%;font-size:120%;">Email: snehasinghal073@gmail.com</h4><br />
