--- a/RESUME/index.html
+++ b/RESUME/index.html
@@ -68,7 +68,7 @@
             <img src="linkedin.png" style="width:50px;margin:20px;" />
         </a>
         <a href="https://www.instagram.com/snehasinghal__/" target="_blank">
-            <img src="insta.png" style="width:50px;margin:20px;" />
+            <img src="insta.jpg" style="width:50px;margin:20px;" />
         </a><br /><br />
         <a href="sneha.pdf" target="_blank"; class="btn">Download CV</a>
     </div>
